--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 body {
 	font-size:400%;
+	font-family:sans-serif;
 	text-align:center;
 	margin:0px;
 	padding:0px;
+	height:100%;
 }
 
 /** Menu Styles **/
@@ -102,13 +104,14 @@ input {
 .inset {
 	margin:0px;
 	background:white;
-	font-size:inherit;
+	font-size:75%;
 }
 
 #copyright {
 	font-size:50%;
-	position:absolute;
+	position:fixed;
 	bottom:0px;
+	height:2.5em;
 	width:100%;
 	background:#4af;
 }
@@ -116,6 +119,7 @@ input {
 .flow {
 	border:1px solid black;
 	display:none;
+	margin-bottom:3em;
 }
 
 .flow button {
