--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 body {
-	font-size:400%;
+	/* font-size:400%; */
 	font-family:sans-serif;
 	text-align:center;
 	margin:0px;
 	padding:0px;
 	height:100%;
+}
+
+#logo {
+	width:5em;
 }
 
 /** Menu Styles **/
