--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 /** Menu Styles **/
 #menuopenbutton {
 	font-size:inherit;
-	position:absolute;
+	position:fixed;
 	z-index:10;
 	left:0px;
 	top:0px;
@@ -33,7 +33,7 @@ body {
 #menu {
 	display:none;
 	font-size:inherit;
-	position:absolute;
+	position:fixed;
 	z-index:20;
 	left:0px;
 	top:0px;
