--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ body {
 	position:absolute;
 	right:0px;
 	top:0px;
+	line-height:75%;
 	padding:0px 4px 0px 4px;
 	margin:0px;
 	border:1px outset gray;
